--- a/serverless.yml
+++ b/serverless.yml
@@ -47,3 +47,14 @@ resources:
           - AttributeName: id
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
+    SismosWebScrapping:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: SismosIGP
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
